// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds a development config 1`] = `
  Object {
    "entry": Object {
      "app": "/tmp/a",
    },
    "mode": "development",
    "module": Object {
      "rules": Array [
        Object {
          "exclude": /node_modules/,
          "test": /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
          "use": Array [
            Object {
              "loader": "/node_modules/babel-loader/lib/index.js",
              "options": Object {
                "cacheDirectory": true,
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.css\\$/,
          "use": Array [
            "/node_modules/style-loader/dist/cjs.js",
            Object {
              "loader": "/node_modules/css-loader/dist/cjs.js",
              "options": Object {
                "importLoaders": 1,
              },
            },
            "/node_modules/postcss-loader/src/index.js",
          ],
        },
        Object {
          "test": /\\\\\\.svg\\$/,
          "use": Array [
            "/node_modules/@svgr/webpack/lib/index.js",
            Object {
              "loader": "/node_modules/file-loader/dist/cjs.js",
              "options": Object {
                "name": "assets/media/[name].[hash:8].[ext]",
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.mp4/,
          "use": Array [
            Object {
              "loader": "/node_modules/file-loader/dist/cjs.js",
              "options": Object {
                "name": "assets/media/[name].[hash:8].[ext]",
              },
            },
          ],
        },
      ],
    },
    "output": Object {
      "chunkFilename": "assets/js/[name].chunk.js",
      "filename": "assets/js/[name].js",
      "publicPath": "/",
    },
    "plugins": Array [
      HtmlWebpackPlugin {
        "assetJson": undefined,
        "childCompilerHash": undefined,
        "hash": undefined,
        "options": Object {
          "base": false,
          "cache": true,
          "chunks": "all",
          "chunksSortMode": "auto",
          "compile": true,
          "excludeChunks": Array [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": "body",
          "meta": Object {
            "viewport": "width=device-width, initial-scale=1",
          },
          "minify": "auto",
          "scriptLoading": "blocking",
          "showErrors": true,
          "template": "auto",
          "templateContent": false,
          "templateParameters": [Function],
          "title": "Webpack App",
          "xhtml": false,
        },
        "version": 4,
      },
      FaviconsWebpackPlugin {
        "options": Object {
          "cache": true,
          "favicons": Object {
            "appDescription": undefined,
            "appName": "Example",
            "appShortName": undefined,
            "background": "#fff",
            "developerURL": null,
            "icons": Object {
              "coast": false,
              "yandex": false,
            },
            "theme_color": "#fff",
          },
          "inject": true,
          "logo": "src/assets/logo.png",
          "prefix": "assets/icons/",
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".tsx",
        ".ts",
        ".mjs",
        ".js",
      ],
    },
  }
`;

exports[`builds a production config 1`] = `
  Object {
    "entry": Object {
      "app": "/tmp/a",
    },
    "mode": "production",
    "module": Object {
      "rules": Array [
        Object {
          "exclude": /node_modules/,
          "test": /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
          "use": Array [
            Object {
              "loader": "/node_modules/babel-loader/lib/index.js",
              "options": Object {
                "cacheDirectory": true,
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.css\\$/,
          "use": Array [
            "/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": "/node_modules/css-loader/dist/cjs.js",
              "options": Object {
                "importLoaders": 1,
              },
            },
            "/node_modules/postcss-loader/src/index.js",
          ],
        },
        Object {
          "test": /\\\\\\.svg\\$/,
          "use": Array [
            "/node_modules/@svgr/webpack/lib/index.js",
            Object {
              "loader": "/node_modules/file-loader/dist/cjs.js",
              "options": Object {
                "name": "assets/media/[name].[hash:8].[ext]",
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.mp4/,
          "use": Array [
            Object {
              "loader": "/node_modules/file-loader/dist/cjs.js",
              "options": Object {
                "name": "assets/media/[name].[hash:8].[ext]",
              },
            },
          ],
        },
      ],
    },
    "optimization": Object {
      "minimize": true,
      "minimizer": Array [
        TerserPlugin {
          "options": Object {
            "cache": true,
            "cacheKeys": [Function],
            "exclude": undefined,
            "extractComments": false,
            "include": undefined,
            "minify": undefined,
            "parallel": true,
            "sourceMap": undefined,
            "terserOptions": Object {},
            "test": /\\\\\\.m\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
            "warningsFilter": [Function],
          },
        },
        OptimizeCssAssetsWebpackPlugin {
          "deleteAssetsMap": Object {},
          "options": Object {
            "assetNameRegExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
            "assetProcessors": Array [
              Object {
                "phase": "compilation.optimize-chunk-assets",
                "processor": [Function],
                "regExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
              },
            ],
            "canPrint": undefined,
            "cssProcessor": [Function],
            "cssProcessorOptions": Object {},
            "cssProcessorPluginOptions": Object {},
          },
          "phaseAssetProcessors": Object {
            "compilation.optimize-assets": Array [],
            "compilation.optimize-chunk-assets": Array [
              Object {
                "phase": "compilation.optimize-chunk-assets",
                "processor": [Function],
                "regExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
              },
            ],
            "emit": Array [],
          },
          "pluginDescriptor": Object {
            "name": "OptimizeCssAssetsWebpackPlugin",
          },
        },
      ],
      "runtimeChunk": "single",
      "splitChunks": Object {
        "cacheGroups": Object {
          "vendor": Object {
            "chunks": "all",
            "enforce": true,
            "name": "vendors",
            "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        },
      },
    },
    "output": Object {
      "chunkFilename": "assets/js/[name].[contenthash:8].chunk.js",
      "filename": "assets/js/[name].[contenthash:8].js",
      "path": "/tmp/b",
      "publicPath": "/",
    },
    "plugins": Array [
      MiniCssExtractPlugin {
        "options": Object {
          "chunkFilename": "assets/css/[name].[contenthash:8].chunk.css",
          "filename": "assets/css/[name].[contenthash:8].css",
          "ignoreOrder": false,
          "moduleFilename": [Function],
        },
      },
      HtmlWebpackPlugin {
        "assetJson": undefined,
        "childCompilerHash": undefined,
        "hash": undefined,
        "options": Object {
          "base": false,
          "cache": true,
          "chunks": "all",
          "chunksSortMode": "auto",
          "compile": true,
          "excludeChunks": Array [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": "body",
          "meta": Object {
            "viewport": "width=device-width, initial-scale=1",
          },
          "minify": "auto",
          "scriptLoading": "blocking",
          "showErrors": true,
          "template": "auto",
          "templateContent": false,
          "templateParameters": [Function],
          "title": "Webpack App",
          "xhtml": false,
        },
        "version": 4,
      },
      CompressionPlugin {
        "emittedAssets": Set {},
        "options": Object {
          "algorithm": [Function],
          "cache": true,
          "compressionOptions": Object {
            "level": 9,
          },
          "deleteOriginalAssets": false,
          "exclude": undefined,
          "filename": "[path].gz[query]",
          "include": undefined,
          "minRatio": 0.8,
          "test": undefined,
          "threshold": 0,
        },
      },
      FaviconsWebpackPlugin {
        "options": Object {
          "cache": true,
          "favicons": Object {
            "appDescription": undefined,
            "appName": "Example",
            "appShortName": undefined,
            "background": "#fff",
            "developerURL": null,
            "icons": Object {
              "coast": false,
              "yandex": false,
            },
            "theme_color": "#fff",
          },
          "inject": true,
          "logo": "src/assets/logo.png",
          "prefix": "assets/icons/",
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".tsx",
        ".ts",
        ".mjs",
        ".js",
      ],
    },
  }
`;
